--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,22 @@
-
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i');
 @import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Proza+Libre');
+
+:root {
+    --main-bg-color: rgba(19, 18, 13, 1);
+    --main-bg-color-tp: rgba(19, 18, 13, .75);
+    --main-text-color: #FBF9F7;
+}
+
 
 body {
-    background-color: #516375;
-    color: #F3F4F5;
+    background-color: var(--main-bg-color);
+    color: var(--main-text-color);
+    background: url('http://afghansk.se/wp-content/uploads/2014/05/bild2-2048x1280.jpg');
+    background-repeat: no-repeat;
+    background-size: initial;
+    background-position: bottom right;
+    background-attachment: fixed;
 }
 
 .onethird{
@@ -13,8 +25,19 @@ body {
 }
 
 h2 {
-    font-family:'Cormorant Garamond', serif;
+    /*font-family:'Cormorant Garamond', serif;*/
+    font-family: 'Proza Libre', sans-serif;
 }
+
+p {
+    font-family: 'Proza Libre', sans-serif;
+    font-size: 1.3em;
+}
+
+.itemtitle {
+    padding-top: .5em;
+}
+
 .description{
     font-family: 'Cormorant Garamond', serif;
 }
@@ -29,8 +52,21 @@ h2 {
     margin: auto;
     width: 50%;
     text-align: center;
-    padding-top: 3em;
-    margin-bottom: 4%;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.top-title {
+    background-color: var(--main-bg-color-tp);
+}
+
+.big {
+    /*background: url('http://afghansk.se/wp-content/uploads/2014/05/bild2-2048x1280.jpg');
+    background-repeat: no-repeat;
+    background-size: initial;
+    background-position: bottom right;
+    background-attachment: fixed;*/
+    background-color: var(--main-bg-color-tp);
 }
 
 hr {
@@ -41,29 +77,41 @@ hr {
     margin: 1em 0;
 }
 
-/*Apapted from Chris Coyier http://jsfiddle.net/ZTz7Q/*/
-.fade_line {
-    margin: 25px 0;
-    height: 1px;
-    background: black;
-    background: -webkit-gradient(linear, 0 0, 100% 0, from(#516375), to(#516375), color-stop(50%, #F3F4F5));
-}
-
 .carousel-inner .active.left  { left: -33%;             }
 .carousel-inner .active.right { left: 33%;              }
 .carousel-inner .next         { left: 33%               }
 .carousel-inner .prev         { left: -33%              }
 .carousel-control.left        { background-image: none; }
 .carousel-control.right       { background-image: none; }
-.carousel-inner .item         { background: #516375;      }
+.carousel-inner .item         {background-color: transparent;}
 
 .homecenter {
     margin: auto;
     width: 50%;
     text-align: center;
 }
+
 .carousel-control.left, .carousel-control.right {
     background-image:none !important;
     filter:none !important;
 
 }
+
+.carousel-control.left{
+    left: -10%;
+}
+
+.carousel-control.right{
+    right: -7.7%;
+}
+
+.col-xs-4 img {
+    background-color: rgba(255, 255, 255, 0.4);
+    margin-top: 5px;
+}
+
+.col-xs-4:hover
+    img {
+        background-color: rgba(255, 255, 255, 0.6);
+        margin-top: 5px;
+    }
